fix overflow

--- a/src/styles/base/_general.scss
+++ b/src/styles/base/_general.scss
@@ -15,6 +15,7 @@ body {
 main {
   min-height: 100vh;
   margin-top: -134px;
+  overflow: hidden;
 }
 
 section {
